changed keywords to topics; fix bug in summary file generation

--- a/output/index.html
+++ b/output/index.html
@@ -1,132 +1,132 @@
 <ul>
-<li><a href='/vbic/keywords#accounting'>Accounting</a></li>
-<li><a href='/vbic/keywords#advertising'>Advertising</a></li>
-<li><a href='/vbic/keywords#agriculturaleconomics'>Agricultural Economics</a></li>
-<li><a href='/vbic/keywords#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/keywords#annualreports'>Annual Reports</a></li>
-<li><a href='/vbic/keywords#associations'>Associations</a></li>
-<li><a href='/vbic/keywords#auditing'>Auditing</a></li>
-<li><a href='/vbic/keywords#bankloans'>Bank Loans</a></li>
-<li><a href='/vbic/keywords#biography'>Biography</a></li>
-<li><a href='/vbic/keywords#bonds'>Bonds</a></li>
-<li><a href='/vbic/keywords#brands'>Brands</a></li>
-<li><a href='/vbic/keywords#businessfinancing'>Business Financing</a></li>
-<li><a href='/vbic/keywords#businessopportunities'>Business Opportunities</a></li>
-<li><a href='/vbic/keywords#businessplanning'>Business Planning</a></li>
-<li><a href='/vbic/keywords#businessplans'>Business Plans</a></li>
+<li><a href='/vbic/resources-by-topic#accounting'>Accounting</a></li>
+<li><a href='/vbic/resources-by-topic#advertising'>Advertising</a></li>
+<li><a href='/vbic/resources-by-topic#agriculturaleconomics'>Agricultural Economics</a></li>
+<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/resources-by-topic#annualreports'>Annual Reports</a></li>
+<li><a href='/vbic/resources-by-topic#associations'>Associations</a></li>
+<li><a href='/vbic/resources-by-topic#auditing'>Auditing</a></li>
+<li><a href='/vbic/resources-by-topic#bankloans'>Bank Loans</a></li>
+<li><a href='/vbic/resources-by-topic#biography'>Biography</a></li>
+<li><a href='/vbic/resources-by-topic#bonds'>Bonds</a></li>
+<li><a href='/vbic/resources-by-topic#brands'>Brands</a></li>
+<li><a href='/vbic/resources-by-topic#businessfinancing'>Business Financing</a></li>
+<li><a href='/vbic/resources-by-topic#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
+<li><a href='/vbic/resources-by-topic#businessplanning'>Business Planning</a></li>
+<li><a href='/vbic/resources-by-topic#businessplans'>Business Plans</a></li>
 <li><a href='/vbic/career'>Career</a></li>
-<li><a href='/vbic/keywords#casestudies'>Case Studies</a></li>
-<li><a href='/vbic/keywords#citationdatabase'>Citation Database</a></li>
-<li><a href='/vbic/keywords#citations'>Citations</a></li>
+<li><a href='/vbic/resources-by-topic#casestudies'>Case Studies</a></li>
+<li><a href='/vbic/resources-by-topic#citationdatabase'>Citation Database</a></li>
+<li><a href='/vbic/resources-by-topic#citations'>Citations</a></li>
 <li><a href='/vbic/company information'>Company Information</a></li>
-<li><a href='/vbic/keywords#companyprofilesandresearch'>Company Profiles and Research</a></li>
-<li><a href='/vbic/keywords#compensation'>Compensation</a></li>
-<li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#consumeranalysisandresearch'>Consumer Analysis and Research</a></li>
-<li><a href='/vbic/keywords#consumerpriceindex'>Consumer Price Index</a></li>
-<li><a href='/vbic/keywords#controversialissues'>Controversial Issues</a></li>
-<li><a href='/vbic/keywords#copyright'>Copyright</a></li>
-<li><a href='/vbic/keywords#corporateculture'>Corporate Culture</a></li>
-<li><a href='/vbic/keywords#countrybackground'>Country Background</a></li>
-<li><a href='/vbic/keywords#countrydata'>Country Data</a></li>
+<li><a href='/vbic/resources-by-topic#companyprofilesandresearch'>Company Profiles and Research</a></li>
+<li><a href='/vbic/resources-by-topic#compensation'>Compensation</a></li>
+<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
+<li><a href='/vbic/resources-by-topic#consumeranalysisandresearch'>Consumer Analysis and Research</a></li>
+<li><a href='/vbic/resources-by-topic#consumerpriceindex'>Consumer Price Index</a></li>
+<li><a href='/vbic/resources-by-topic#controversialissues'>Controversial Issues</a></li>
+<li><a href='/vbic/resources-by-topic#copyright'>Copyright</a></li>
+<li><a href='/vbic/resources-by-topic#corporateculture'>Corporate Culture</a></li>
+<li><a href='/vbic/resources-by-topic#countrybackground'>Country Background</a></li>
+<li><a href='/vbic/resources-by-topic#countrydata'>Country Data</a></li>
 <li><a href='/vbic/country research'>Country Research</a></li>
-<li><a href='/vbic/keywords#culture'>Culture</a></li>
-<li><a href='/vbic/keywords#debt'>Debt</a></li>
-<li><a href='/vbic/keywords#demographics'>Demographics</a></li>
+<li><a href='/vbic/resources-by-topic#culture'>Culture</a></li>
+<li><a href='/vbic/resources-by-topic#debt'>Debt</a></li>
+<li><a href='/vbic/resources-by-topic#demographics'>Demographics</a></li>
 <li><a href='/vbic/demographics and statistics'>Demographics and Statistics</a></li>
-<li><a href='/vbic/keywords#dictionaries'>Dictionaries</a></li>
-<li><a href='/vbic/keywords#directinvestment'>Direct Investment</a></li>
-<li><a href='/vbic/keywords#dissertations'>Dissertations</a></li>
-<li><a href='/vbic/keywords#distributors'>Distributors</a></li>
-<li><a href='/vbic/keywords#doingbusinessin'>Doing Business In</a></li>
-<li><a href='/vbic/keywords#dowjonesindustrialaverage'>Dow Jones Industrial Average</a></li>
-<li><a href='/vbic/keywords#ebooks'>E-Books</a></li>
-<li><a href='/vbic/keywords#ecommerce'>E-Commerce</a></li>
-<li><a href='/vbic/keywords#ejournals'>E-Journals</a></li>
-<li><a href='/vbic/keywords#econometrics'>Econometrics</a></li>
-<li><a href='/vbic/keywords#economicdatainternational'>Economic Data: International</a></li>
-<li><a href='/vbic/keywords#economicdataunitedstates'>Economic Data: United States</a></li>
-<li><a href='/vbic/keywords#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/resources-by-topic#dictionaries'>Dictionaries</a></li>
+<li><a href='/vbic/resources-by-topic#directinvestment'>Direct Investment</a></li>
+<li><a href='/vbic/resources-by-topic#dissertations'>Dissertations</a></li>
+<li><a href='/vbic/resources-by-topic#distributors'>Distributors</a></li>
+<li><a href='/vbic/resources-by-topic#doingbusinessin'>Doing Business In</a></li>
+<li><a href='/vbic/resources-by-topic#dowjonesindustrialaverage'>Dow Jones Industrial Average</a></li>
+<li><a href='/vbic/resources-by-topic#ebooks'>E-Books</a></li>
+<li><a href='/vbic/resources-by-topic#ecommerce'>E-Commerce</a></li>
+<li><a href='/vbic/resources-by-topic#ejournals'>E-Journals</a></li>
+<li><a href='/vbic/resources-by-topic#econometrics'>Econometrics</a></li>
+<li><a href='/vbic/resources-by-topic#economicdatainternational'>Economic Data: International</a></li>
+<li><a href='/vbic/resources-by-topic#economicdataunitedstates'>Economic Data: United States</a></li>
+<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
 <li><a href='/vbic/economics'>Economics</a></li>
-<li><a href='/vbic/keywords#employment'>Employment</a></li>
-<li><a href='/vbic/keywords#encyclopedia'>Encyclopedia</a></li>
+<li><a href='/vbic/resources-by-topic#employment'>Employment</a></li>
+<li><a href='/vbic/resources-by-topic#encyclopedia'>Encyclopedia</a></li>
 <li><a href='/vbic/entrepreneurship'>Entrepreneurship</a></li>
-<li><a href='/vbic/keywords#ethics'>Ethics</a></li>
-<li><a href='/vbic/keywords#export'>Export</a></li>
+<li><a href='/vbic/resources-by-topic#ethics'>Ethics</a></li>
+<li><a href='/vbic/resources-by-topic#export'>Export</a></li>
 <li><a href='/vbic/finance &amp; investment'>Finance &amp; Investment</a></li>
-<li><a href='/vbic/keywords#financialinformation'>Financial Information</a></li>
-<li><a href='/vbic/keywords#foreigndirectinvestment'>Foreign Direct Investment</a></li>
-<li><a href='/vbic/keywords#franchising'>Franchising</a></li>
-<li><a href='/vbic/keywords#fundraising'>Fundraising</a></li>
-<li><a href='/vbic/keywords#globalization'>Globalization</a></li>
-<li><a href='/vbic/keywords#grants'>Grants</a></li>
-<li><a href='/vbic/keywords#grossdomesticproductgdp'>Gross Domestic Product (GDP)</a></li>
-<li><a href='/vbic/keywords#grossnationalincomegni'>Gross National Income (GNI)</a></li>
-<li><a href='/vbic/keywords#humanresourcemanagement'>Human Resource Management</a></li>
-<li><a href='/vbic/keywords#import'>Import</a></li>
+<li><a href='/vbic/resources-by-topic#financialinformation'>Financial Information</a></li>
+<li><a href='/vbic/resources-by-topic#foreigndirectinvestment'>Foreign Direct Investment</a></li>
+<li><a href='/vbic/resources-by-topic#franchising'>Franchising</a></li>
+<li><a href='/vbic/resources-by-topic#fundraising'>Fundraising</a></li>
+<li><a href='/vbic/resources-by-topic#globalization'>Globalization</a></li>
+<li><a href='/vbic/resources-by-topic#grants'>Grants</a></li>
+<li><a href='/vbic/resources-by-topic#grossdomesticproductgdp'>Gross Domestic Product (GDP)</a></li>
+<li><a href='/vbic/resources-by-topic#grossnationalincomegni'>Gross National Income (GNI)</a></li>
+<li><a href='/vbic/resources-by-topic#humanresourcemanagement'>Human Resource Management</a></li>
+<li><a href='/vbic/resources-by-topic#import'>Import</a></li>
 <li><a href='/vbic/industry'>Industry</a></li>
-<li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/keywords#industryoverview'>Industry Overview</a></li>
-<li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/keywords#industrytrends'>Industry Trends</a></li>
-<li><a href='/vbic/keywords#internationalaffairs'>International Affairs</a></li>
-<li><a href='/vbic/keywords#internationalbusiness'>International Business</a></li>
-<li><a href='/vbic/keywords#internationallaw'>International Law</a></li>
-<li><a href='/vbic/keywords#internationaltrade'>International Trade</a></li>
-<li><a href='/vbic/keywords#investmentandsecurities'>Investment and Securities</a></li>
-<li><a href='/vbic/keywords#jobs'>Jobs</a></li>
-<li><a href='/vbic/keywords#law'>Law</a></li>
-<li><a href='/vbic/keywords#leadership'>Leadership</a></li>
-<li><a href='/vbic/keywords#lifestyles'>Lifestyles</a></li>
+<li><a href='/vbic/resources-by-topic#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/resources-by-topic#industryoverview'>Industry Overview</a></li>
+<li><a href='/vbic/resources-by-topic#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/resources-by-topic#industrytrends'>Industry Trends</a></li>
+<li><a href='/vbic/resources-by-topic#internationalaffairs'>International Affairs</a></li>
+<li><a href='/vbic/resources-by-topic#internationalbusiness'>International Business</a></li>
+<li><a href='/vbic/resources-by-topic#internationallaw'>International Law</a></li>
+<li><a href='/vbic/resources-by-topic#internationaltrade'>International Trade</a></li>
+<li><a href='/vbic/resources-by-topic#investmentandsecurities'>Investment and Securities</a></li>
+<li><a href='/vbic/resources-by-topic#jobs'>Jobs</a></li>
+<li><a href='/vbic/resources-by-topic#law'>Law</a></li>
+<li><a href='/vbic/resources-by-topic#leadership'>Leadership</a></li>
+<li><a href='/vbic/resources-by-topic#lifestyles'>Lifestyles</a></li>
 <li><a href='/vbic/logistics'>Logistics</a></li>
-<li><a href='/vbic/keywords#management'>Management</a></li>
-<li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
-<li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
-<li><a href='/vbic/keywords#marketsize'>Market Size</a></li>
+<li><a href='/vbic/resources-by-topic#management'>Management</a></li>
+<li><a href='/vbic/resources-by-topic#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/resources-by-topic#marketshare'>Market Share</a></li>
+<li><a href='/vbic/resources-by-topic#marketsize'>Market Size</a></li>
 <li><a href='/vbic/marketing'>Marketing</a></li>
-<li><a href='/vbic/keywords#marketingplans'>Marketing Plans</a></li>
-<li><a href='/vbic/keywords#masterstheses'>Master's Theses</a></li>
-<li><a href='/vbic/keywords#mergersandacquisitions'>Mergers and Acquisitions</a></li>
-<li><a href='/vbic/keywords#mutualfunds'>Mutual Funds</a></li>
-<li><a href='/vbic/keywords#naicscode'>NAICS Code</a></li>
-<li><a href='/vbic/keywords#news'>News</a></li>
-<li><a href='/vbic/keywords#nonprofits'>Nonprofits</a></li>
-<li><a href='/vbic/keywords#operationsmanagement'>Operations Management</a></li>
-<li><a href='/vbic/keywords#options'>Options</a></li>
-<li><a href='/vbic/keywords#outsourcing'>Outsourcing</a></li>
-<li><a href='/vbic/keywords#patentsandtrademarks'>Patents and Trademarks</a></li>
-<li><a href='/vbic/keywords#philanthropy'>Philanthropy</a></li>
-<li><a href='/vbic/keywords#polls'>Polls</a></li>
-<li><a href='/vbic/keywords#ports'>Ports</a></li>
+<li><a href='/vbic/resources-by-topic#marketingplans'>Marketing Plans</a></li>
+<li><a href='/vbic/resources-by-topic#masterstheses'>Master's Theses</a></li>
+<li><a href='/vbic/resources-by-topic#mergersandacquisitions'>Mergers and Acquisitions</a></li>
+<li><a href='/vbic/resources-by-topic#mutualfunds'>Mutual Funds</a></li>
+<li><a href='/vbic/resources-by-topic#naicscode'>NAICS Code</a></li>
+<li><a href='/vbic/resources-by-topic#news'>News</a></li>
+<li><a href='/vbic/resources-by-topic#nonprofits'>Nonprofits</a></li>
+<li><a href='/vbic/resources-by-topic#operationsmanagement'>Operations Management</a></li>
+<li><a href='/vbic/resources-by-topic#options'>Options</a></li>
+<li><a href='/vbic/resources-by-topic#outsourcing'>Outsourcing</a></li>
+<li><a href='/vbic/resources-by-topic#patentsandtrademarks'>Patents and Trademarks</a></li>
+<li><a href='/vbic/resources-by-topic#philanthropy'>Philanthropy</a></li>
+<li><a href='/vbic/resources-by-topic#polls'>Polls</a></li>
+<li><a href='/vbic/resources-by-topic#ports'>Ports</a></li>
 <li><a href='/vbic/product'>Product</a></li>
-<li><a href='/vbic/keywords#productcodes'>Product Codes</a></li>
-<li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
-<li><a href='/vbic/keywords#publicpolicy'>Public Policy</a></li>
-<li><a href='/vbic/keywords#rankings'>Rankings</a></li>
-<li><a href='/vbic/keywords#regionalnews'>Regional News</a></li>
-<li><a href='/vbic/keywords#regulations'>Regulations</a></li>
-<li><a href='/vbic/keywords#risk'>Risk</a></li>
-<li><a href='/vbic/keywords#sampp500'>S&amp;P 500</a></li>
-<li><a href='/vbic/keywords#secfilings'>SEC Filings</a></li>
-<li><a href='/vbic/keywords#sic'>SIC</a></li>
-<li><a href='/vbic/keywords#swot'>SWOT</a></li>
-<li><a href='/vbic/keywords#smallbusiness'>Small Business</a></li>
-<li><a href='/vbic/keywords#socialentrepreneurship'>Social Entrepreneurship</a></li>
-<li><a href='/vbic/keywords#statisticsinternational'>Statistics: International</a></li>
-<li><a href='/vbic/keywords#statisticsunitedstates'>Statistics: United States</a></li>
-<li><a href='/vbic/keywords#stockexchange'>Stock Exchange</a></li>
-<li><a href='/vbic/keywords#stocks'>Stocks</a></li>
-<li><a href='/vbic/keywords#surveys'>Surveys</a></li>
-<li><a href='/vbic/keywords#taxation'>Taxation</a></li>
-<li><a href='/vbic/keywords#technology'>Technology</a></li>
-<li><a href='/vbic/keywords#tests'>Tests</a></li>
-<li><a href='/vbic/keywords#theses'>Theses</a></li>
-<li><a href='/vbic/keywords#tradeagreements'>Trade Agreements</a></li>
-<li><a href='/vbic/keywords#training'>Training</a></li>
-<li><a href='/vbic/keywords#trains'>Trains</a></li>
-<li><a href='/vbic/keywords#transportationmodes'>Transportation Modes</a></li>
-<li><a href='/vbic/keywords#venturecapital'>Venture Capital</a></li>
-<li><a href='/vbic/keywords#volunteerism'>Volunteerism</a></li>
-<li><a href='/vbic/keywords#wallstreetjournal'>Wall Street Journal</a></li>
-<li><a href='/vbic/keywords#wholesale'>Wholesale</a></li>
+<li><a href='/vbic/resources-by-topic#productcodes'>Product Codes</a></li>
+<li><a href='/vbic/resources-by-topic#productdevelopment'>Product Development</a></li>
+<li><a href='/vbic/resources-by-topic#publicpolicy'>Public Policy</a></li>
+<li><a href='/vbic/resources-by-topic#rankings'>Rankings</a></li>
+<li><a href='/vbic/resources-by-topic#regionalnews'>Regional News</a></li>
+<li><a href='/vbic/resources-by-topic#regulations'>Regulations</a></li>
+<li><a href='/vbic/resources-by-topic#risk'>Risk</a></li>
+<li><a href='/vbic/resources-by-topic#sampp500'>S&amp;P 500</a></li>
+<li><a href='/vbic/resources-by-topic#secfilings'>SEC Filings</a></li>
+<li><a href='/vbic/resources-by-topic#sic'>SIC</a></li>
+<li><a href='/vbic/resources-by-topic#swot'>SWOT</a></li>
+<li><a href='/vbic/resources-by-topic#smallbusiness'>Small Business</a></li>
+<li><a href='/vbic/resources-by-topic#socialentrepreneurship'>Social Entrepreneurship</a></li>
+<li><a href='/vbic/resources-by-topic#statisticsinternational'>Statistics: International</a></li>
+<li><a href='/vbic/resources-by-topic#statisticsunitedstates'>Statistics: United States</a></li>
+<li><a href='/vbic/resources-by-topic#stockexchange'>Stock Exchange</a></li>
+<li><a href='/vbic/resources-by-topic#stocks'>Stocks</a></li>
+<li><a href='/vbic/resources-by-topic#surveys'>Surveys</a></li>
+<li><a href='/vbic/resources-by-topic#taxation'>Taxation</a></li>
+<li><a href='/vbic/resources-by-topic#technology'>Technology</a></li>
+<li><a href='/vbic/resources-by-topic#tests'>Tests</a></li>
+<li><a href='/vbic/resources-by-topic#theses'>Theses</a></li>
+<li><a href='/vbic/resources-by-topic#tradeagreements'>Trade Agreements</a></li>
+<li><a href='/vbic/resources-by-topic#training'>Training</a></li>
+<li><a href='/vbic/resources-by-topic#trains'>Trains</a></li>
+<li><a href='/vbic/resources-by-topic#transportationmodes'>Transportation Modes</a></li>
+<li><a href='/vbic/resources-by-topic#venturecapital'>Venture Capital</a></li>
+<li><a href='/vbic/resources-by-topic#volunteerism'>Volunteerism</a></li>
+<li><a href='/vbic/resources-by-topic#wallstreetjournal'>Wall Street Journal</a></li>
+<li><a href='/vbic/resources-by-topic#wholesale'>Wholesale</a></li>
 </ul>
