--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -24,6 +24,7 @@
 <li><a href='http://www.brookings.edu/topics/globalization.aspx'>Brookings Institution &mdash; Globalization Page</a></li>
 <li><a href='http://www.bls.gov/'>Bureau of Labor Statistics</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a> <div style='font-size: 90%'>[<em>Note: To access Company Profiles, click on link from the "More" option menu top of screen (in the blue band) to search for Company profiles by Company name.</em>]</div></li>
+<li><a href='http://www.morebusiness.com'>Business Resource Center</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='C'>C</h3>
@@ -56,6 +57,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip '>Data-Planet Statistical Datasets</a></li>
 <li>Data-Planet Statistical Ready Reference</li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to: helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://www.rhsmith.umd.edu//node/345'>Dingman Center for Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://www.uniworldbp.com/search.php'>Directory of American Firms Operating in Foreign Countries/Foreign Firms Operating in U.S</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/pqdtft?accountid=14696'>Dissertations &amp; Theses: Full Text</a></li>
 <li><a href='http://www.doingbusiness.org/'>Doing Business Database</a></li>
