--- a/output/res-by-topic.html
+++ b/output/res-by-topic.html
@@ -85,7 +85,7 @@
 <ul>
 <li><b><a href='http://www.pwcmoneytree.com/MTPublic/ns/index.jsp'>PricewaterhouseCoopers: MoneyTree Report</a></b>: The MoneyTree Report is a quarterly study of venture capital investment activity in the United States providing information on emerging companies that receive financing and the venture capital firms that provide it.</li>
 </ul>
-<h3 id='businessopportunities'>Business Opportunities</h3>
+<h3 id='businessopportunitiesgovernment'>Business Opportunities (Government)</h3>
 <ul>
 <li><b><a href='http://www.fbo.gov/'>FedBizOpps.gov (Federal Business Opportunities)</a></b>: A single point of entry for announcements of federal contract opportunities over $25,000, both in both the civilian and military sectors.</li>
 </ul>
