--- a/output/summary_cats.html
+++ b/output/summary_cats.html
@@ -37,6 +37,8 @@
 <h2>Entrepreneurship</h2>
 <ul>
 <li>Small Business Administration = 1</li>
+<li>Dingman Center for Entrepreneurship = 2</li>
+<li>Business Resource Center = 3</li>
 </ul>
 <h2>Finance &amp; Investment</h2>
 <ul>
