--- a/output/rel-com.html
+++ b/output/rel-com.html
@@ -1,17 +1,17 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/keywords#annualreports'>Annual Reports</a></li>
-<li><a href='/vbic/keywords#companyprofiles'>Company Profiles</a></li>
-<li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#financialinformation'>Financial information</a></li>
-<li><a href='/vbic/keywords#internationalbusiness'>International Business</a></li>
-<li><a href='/vbic/keywords#investments'>Investments</a></li>
-<li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
-<li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
-<li><a href='/vbic/keywords#mergersandacquisitions'>Mergers and Acquisitions</a></li>
-<li><a href='/vbic/keywords#biography'>Biography</a></li>
-<li><a href='/vbic/keywords#rankings'>Rankings</a></li>
-<li><a href='/vbic/keywords#regulations'>Regulations</a></li>
-<li><a href='/vbic/keywords#swot'>SWOT</a></li>
+<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/resources-by-topic#annualreports'>Annual Reports</a></li>
+<li><a href='/vbic/resources-by-topic#companyprofiles'>Company Profiles</a></li>
+<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
+<li><a href='/vbic/resources-by-topic#financialinformation'>Financial information</a></li>
+<li><a href='/vbic/resources-by-topic#internationalbusiness'>International Business</a></li>
+<li><a href='/vbic/resources-by-topic#investmentandsecurities'>Investment and Securities</a></li>
+<li><a href='/vbic/resources-by-topic#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/resources-by-topic#marketshare'>Market Share</a></li>
+<li><a href='/vbic/resources-by-topic#mergersandacquisitions'>Mergers and Acquisitions</a></li>
+<li><a href='/vbic/resources-by-topic#biography'>Biography</a></li>
+<li><a href='/vbic/resources-by-topic#rankings'>Rankings</a></li>
+<li><a href='/vbic/resources-by-topic#regulations'>Regulations</a></li>
+<li><a href='/vbic/resources-by-topic#swot'>SWOT</a></li>
 </ul>
