--- a/output/rel-cou.html
+++ b/output/rel-cou.html
@@ -1,13 +1,13 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#countrybackground'>Country Background</a></li>
-<li><a href='/vbic/keywords#culture'>Culture</a></li>
-<li><a href='/vbic/keywords#doingbusinessin'>Doing Business In</a></li>
-<li><a href='/vbic/keywords#economicindicators'>Economic Indicators</a></li>
-<li><a href='/vbic/keywords#globalization'>Globalization</a></li>
-<li><a href='/vbic/keywords#internationallaw'>International Law</a></li>
-<li><a href='/vbic/keywords#marketing'>Marketing</a></li>
-<li><a href='/vbic/keywords#news'>News</a></li>
-<li><a href='/vbic/keywords#statistics'>Statistics</a></li>
-<li><a href='/vbic/keywords#translations'>Translations</a></li>
+<li><a href='/vbic/resources-by-topic#countrybackground'>Country Background</a></li>
+<li><a href='/vbic/resources-by-topic#culture'>Culture</a></li>
+<li><a href='/vbic/resources-by-topic#doingbusinessin'>Doing Business In</a></li>
+<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/resources-by-topic#globalization'>Globalization</a></li>
+<li><a href='/vbic/resources-by-topic#internationallaw'>International Law</a></li>
+<li><a href='/vbic/resources-by-topic#marketing'>Marketing</a></li>
+<li><a href='/vbic/resources-by-topic#news'>News</a></li>
+<li><a href='/vbic/resources-by-topic#statistics'>Statistics</a></li>
+<li><a href='/vbic/resources-by-topic#translations'>Translations</a></li>
 </ul>
