--- a/output/rel-dem.html
+++ b/output/rel-dem.html
@@ -1,5 +1,5 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#laboreconomics'>Labor Economics</a></li>
-<li><a href='/vbic/keywords#populationandhousingdata'>Population and Housing Data</a></li>
+<li><a href='/vbic/resources-by-topic#laboreconomics'>Labor Economics</a></li>
+<li><a href='/vbic/resources-by-topic#populationandhousingdata'>Population and Housing Data</a></li>
 </ul>
