--- a/output/rel-eco.html
+++ b/output/rel-eco.html
@@ -1,9 +1,9 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#consumerpriceindex'>Consumer Price Index</a></li>
-<li><a href='/vbic/keywords#demographics'>Demographics</a></li>
-<li><a href='/vbic/keywords#economicindicators'>Economic Indicators</a></li>
-<li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/keywords#laboreconomics'>Labor Economics</a></li>
-<li><a href='/vbic/keywords#news'>News</a></li>
+<li><a href='/vbic/resources-by-topic#consumerpriceindex'>Consumer Price Index</a></li>
+<li><a href='/vbic/resources-by-topic#demographics'>Demographics</a></li>
+<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/resources-by-topic#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/resources-by-topic#laboreconomics'>Labor Economics</a></li>
+<li><a href='/vbic/resources-by-topic#news'>News</a></li>
 </ul>
