--- a/output/rel-ent.html
+++ b/output/rel-ent.html
@@ -1,8 +1,9 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#businessplans'>Business Plans</a></li>
-<li><a href='/vbic/keywords#businessplanning'>Business Planning</a></li>
-<li><a href='/vbic/keywords#businessfinancing'>Business Financing</a></li>
-<li><a href='/vbic/keywords#franchising'>Franchising</a></li>
-<li><a href='/vbic/keywords#smallbusiness'>Small Business</a></li>
+<li><a href='/vbic/resources-by-topic#businessplans'>Business Plans</a></li>
+<li><a href='/vbic/resources-by-topic#businessplanning'>Business Planning</a></li>
+<li><a href='/vbic/resources-by-topic#businessfinancing'>Business Financing</a></li>
+<li><a href='/vbic/resources-by-topic#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
+<li><a href='/vbic/resources-by-topic#franchising'>Franchising</a></li>
+<li><a href='/vbic/resources-by-topic#smallbusiness'>Small Business</a></li>
 </ul>
