--- a/output/rel-fin.html
+++ b/output/rel-fin.html
@@ -1,10 +1,10 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/keywords#bonds'>Bonds</a></li>
-<li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/keywords#investments'>Investments</a></li>
-<li><a href='/vbic/keywords#mutualfunds'>Mutual Funds</a></li>
-<li><a href='/vbic/keywords#stocks'>Stocks</a></li>
-<li><a href='/vbic/keywords#stockexchange'>Stock Exchange</a></li>
+<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/resources-by-topic#bonds'>Bonds</a></li>
+<li><a href='/vbic/resources-by-topic#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/resources-by-topic#investments'>Investments</a></li>
+<li><a href='/vbic/resources-by-topic#mutualfunds'>Mutual Funds</a></li>
+<li><a href='/vbic/resources-by-topic#stocks'>Stocks</a></li>
+<li><a href='/vbic/resources-by-topic#stockexchange'>Stock Exchange</a></li>
 </ul>
