--- a/output/rel-ind.html
+++ b/output/rel-ind.html
@@ -1,12 +1,12 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/keywords#swot'>SWOT</a></li>
-<li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/keywords#statisticsinternational'>Statistics: International</a></li>
-<li><a href='/vbic/keywords#statisticsunitedstates'>Statistics: United States</a></li>
-<li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
-<li><a href='/vbic/keywords#industryanalysismodels'>Industry Analysis Models</a></li>
-<li><a href='/vbic/keywords#regulations'>Regulations</a></li>
+<li><a href='/vbic/resources-by-topic#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/resources-by-topic#swot'>SWOT</a></li>
+<li><a href='/vbic/resources-by-topic#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/resources-by-topic#statisticsinternational'>Statistics: International</a></li>
+<li><a href='/vbic/resources-by-topic#statisticsunitedstates'>Statistics: United States</a></li>
+<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
+<li><a href='/vbic/resources-by-topic#marketshare'>Market Share</a></li>
+<li><a href='/vbic/resources-by-topic#industryanalysismodels'>Industry Analysis Models</a></li>
+<li><a href='/vbic/resources-by-topic#regulations'>Regulations</a></li>
 </ul>
