--- a/output/rel-mar.html
+++ b/output/rel-mar.html
@@ -1,8 +1,8 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#advertising'>Advertising</a></li>
-<li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#consumeranalysis'>Consumer Analysis</a></li>
-<li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
-<li><a href='/vbic/keywords#promotion'>Promotion</a></li>
+<li><a href='/vbic/resources-by-topic#advertising'>Advertising</a></li>
+<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
+<li><a href='/vbic/resources-by-topic#consumeranalysis'>Consumer Analysis</a></li>
+<li><a href='/vbic/resources-by-topic#productdevelopment'>Product Development</a></li>
+<li><a href='/vbic/resources-by-topic#promotion'>Promotion</a></li>
 </ul>
