--- a/output/rel-pro.html
+++ b/output/rel-pro.html
@@ -1,8 +1,8 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#brands'>Brands</a></li>
-<li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
-<li><a href='/vbic/keywords#patentsandtrademarks'>Patents and Trademarks</a></li>
-<li><a href='/vbic/keywords#productcodes'>Product Codes</a></li>
-<li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
+<li><a href='/vbic/resources-by-topic#brands'>Brands</a></li>
+<li><a href='/vbic/resources-by-topic#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/resources-by-topic#patentsandtrademarks'>Patents and Trademarks</a></li>
+<li><a href='/vbic/resources-by-topic#productcodes'>Product Codes</a></li>
+<li><a href='/vbic/resources-by-topic#productdevelopment'>Product Development</a></li>
 </ul>
