--- a/output/summary_topics.html
+++ b/output/summary_topics.html
@@ -7,21 +7,25 @@
 <li>Datastream Advance = 4</li>
 <li>AuditAnalytics = 99</li>
 <li>Encyclopedia of Business and Finance = 99</li>
+</ul>
 <h3>Advertising</h3>
 <ul>
 <li>RDS Business Reference Suite = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Mintel = 3</li>
+</ul>
 <h3>Agricultural Economics</h3>
 <ul>
 <li>AgEcon Search = 99</li>
 <li>Annual Review of Resource Economics = 99</li>
+</ul>
 <h3>Analyst Reports</h3>
 <ul>
 <li>Morningstar = 1</li>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>RDS Business Reference Suite = 3</li>
 <li>Morningstar Direct = 99</li>
+</ul>
 <h3>Annual Reports</h3>
 <ul>
 <li>Hoovers Online = 2</li>
@@ -30,6 +34,7 @@
 <li>Datastream Advance = 5</li>
 <li>EDGAR = 99</li>
 <li>Mergent WebReports = 99</li>
+</ul>
 <h3>Associations</h3>
 <ul>
 <li>Hoovers Online = 1</li>
@@ -38,6 +43,7 @@
 <li>Trade Association - Washington, DC in the Yahoo Directory = 5</li>
 <li>Idealist = 6</li>
 <li>The Scholarly Societies Project = 7</li>
+</ul>
 <h3>Auditing</h3>
 <ul>
 <li>RIA Checkpoint = 1</li>
@@ -48,6 +54,7 @@
 <h3>Bank Loans</h3>
 <ul>
 <li>Thomson Reuters LPC DealScan = 99</li>
+</ul>
 <h3>Biography</h3>
 <ul>
 <li>Hoovers Online = 1</li>
@@ -56,6 +63,7 @@
 <li>LexisNexis Academic = 4</li>
 <li>Academic Search Premier = 99</li>
 <li>Great American Business Leaders of the Twentieth Century = 99</li>
+</ul>
 <h3>Bonds</h3>
 <ul>
 <li>Bloomberg = 1</li>
@@ -63,17 +71,21 @@
 <li>Business Source Complete = 4</li>
 <li>Factiva = 5</li>
 <li>Standard &amp; Poor's = 99</li>
+</ul>
 <h3>Brands</h3>
 <ul>
 <li>Business Source Complete = 1</li>
 <li>Factiva = 2</li>
 <li>PsycInfo = 99</li>
+</ul>
 <h3>Business Financing</h3>
 <ul>
 <li>PricewaterhouseCoopers: MoneyTree Report = 99</li>
-<h3>Business Opportunities</h3>
+</ul>
+<h3>Business Opportunities (Government)</h3>
 <ul>
 <li>FedBizOpps.gov (Federal Business Opportunities) = 99</li>
+</ul>
 <h3>Business Planning</h3>
 <ul>
 <li>American FactFinder = 1</li>
@@ -83,6 +95,7 @@
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
 <li>Small Business Administration = 99</li>
 <li>U.S. Census Bureau = 99</li>
+</ul>
 <h3>Business Plans</h3>
 <ul>
 <li>BPlans.com = 1</li>
@@ -96,17 +109,21 @@
 <li>RDS Business Reference Suite = 99</li>
 <li>Testing and Education Reference Center = 99</li>
 <li>Volunteer Today = 99</li>
+</ul>
 <h3>Case Studies</h3>
 <ul>
 <li>Business Source Complete = 99</li>
+</ul>
 <h3>Citation Database</h3>
 <ul>
 <li>Science Citation Index Expanded &ndash; Web of Science = 99</li>
 <li>Social Science Citation Index &ndash; Web of Science = 99</li>
 <li>Web of Science = 99</li>
+</ul>
 <h3>Citations</h3>
 <ul>
 <li>RefWorks = 99</li>
+</ul>
 <h3>Company Profiles and Research</h3>
 <ul>
 <li>Hoovers Online = 1</li>
@@ -121,10 +138,12 @@
 <li>Mergent WebReports = 10</li>
 <li>RDS Business Reference Suite = 11</li>
 <li>S&amp;P Capital IQ = 12</li>
+</ul>
 <h3>Compensation</h3>
 <ul>
 <li>CQ Researcher = 99</li>
 <li>S&amp;P ExecuComp = 99</li>
+</ul>
 <h3>Competitors</h3>
 <ul>
 <li>Hoovers Online = 1</li>
@@ -137,6 +156,7 @@
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 8</li>
 <li>RDS Business Reference Suite = 9</li>
 <li>Standard &amp; Poor's Net Advantage = 10</li>
+</ul>
 <h3>Consumer Analysis and Research</h3>
 <ul>
 <li>Mintel = 1</li>
@@ -147,16 +167,20 @@
 <li>Business Source Complete = 7</li>
 <li>Factiva = 8</li>
 <li>PsycInfo = 9</li>
+</ul>
 <h3>Consumer Price Index</h3>
 <ul>
 <li>Economagic = 1</li>
 <li>Global Insight (IHS) DataInsight Web = 2</li>
+</ul>
 <h3>Controversial Issues</h3>
 <ul>
 <li>Opposing Viewpoints in Context = 99</li>
+</ul>
 <h3>Copyright</h3>
 <ul>
 <li>U.S. Copyright Office = 99</li>
+</ul>
 <h3>Corporate Culture</h3>
 <ul>
 <li>Business Source Complete = 1</li>
@@ -164,6 +188,7 @@
 <li>Factiva = 3</li>
 <li>RDS Business Reference Suite = 4</li>
 <li>PsycInfo = 99</li>
+</ul>
 <h3>Country Background</h3>
 <ul>
 <li>Background Notes = 1</li>
@@ -179,6 +204,7 @@
 <li>Everything International = 99</li>
 <li>Global Development Finance = 99</li>
 <li>Human Development Report = 99</li>
+</ul>
 <h3>Country Data</h3>
 <ul>
 <li>Global Development Finance = 99</li>
@@ -192,6 +218,7 @@
 <li>OffStats &ndash; Official Statistics on the Web = 99</li>
 <li>One World &ndash; Nations Online = 99</li>
 <li>Quarterly External Debt Statistics (QEDS/SDDS/GDDS) = 99</li>
+</ul>
 <h3>Country Research</h3>
 <ul>
 <li>Doing Business Database = 99</li>
@@ -211,6 +238,7 @@
 <li>World Development Indicators = 99</li>
 <li>World Economic Outlook = 99</li>
 <li>World Investment Report = 99</li>
+</ul>
 <h3>Culture</h3>
 <ul>
 <li>Kwintessential Country Profiles = 1</li>
@@ -226,6 +254,7 @@
 <li>Federal Reserve Economic Data (FRED) = 99</li>
 <li>Global Development Finance = 99</li>
 <li>Mergent Online = 99</li>
+</ul>
 <h3>Demographics</h3>
 <ul>
 <li>Regional Economic Conditions (RECON) = 1</li>
@@ -242,19 +271,24 @@
 <li>Statistical Abstract of the United States = 99</li>
 <li>Statistical Sites of the World Wide Web = 99</li>
 <li>U.S. Census Bureau = 99</li>
+</ul>
 <h3>Dictionaries</h3>
 <ul>
 <li>New Palgrave Dictionary of Economics = 99</li>
+</ul>
 <h3>Direct Investment</h3>
 <ul>
 <li>World Investment Report = 99</li>
+</ul>
 <h3>Dissertations</h3>
 <ul>
 <li>Dissertations &amp; Theses: Full Text = 99</li>
+</ul>
 <h3>Distributors</h3>
 <ul>
 <li>Wholesale Distributors Net = 1</li>
 <li>ThomasNet = 2</li>
+</ul>
 <h3>Doing Business In</h3>
 <ul>
 <li>Country Commercial Guides = 1</li>
@@ -282,6 +316,7 @@
 <li>NationMaster.com = 99</li>
 <li>Oxford Encyclopedia of Economic History = 99</li>
 <li>World Business Culture = 99</li>
+</ul>
 <h3>Dow Jones Industrial Average</h3>
 <ul>
 <li>Factiva = 1</li>
@@ -292,26 +327,32 @@
 <h3>E-Books</h3>
 <ul>
 <li>Springer eBooks (2005-2011) = 99</li>
+</ul>
 <h3>E-Commerce</h3>
 <ul>
 <li>Encyclopedia of E-Commerce = 99</li>
+</ul>
 <h3>E-Journals</h3>
 <ul>
 <li>Springer eBooks (2005-2011) = 99</li>
+</ul>
 <h3>Econometrics</h3>
 <ul>
 <li>EconLit = 1</li>
 <li>Federal Reserve Economic Data (FRED) = 2</li>
+</ul>
 <h3>Economic Data: International</h3>
 <ul>
 <li>IHS Global Insight DataInsight Web = 99</li>
 <li>Passport = 99</li>
 <li>RFE: Resources for Economists on the Internet = 99</li>
+</ul>
 <h3>Economic Data: United States</h3>
 <ul>
 <li>FRB Beige Book = 99</li>
 <li>IHS Global Insight DataInsight Web = 99</li>
 <li>RFE: Resources for Economists on the Internet = 99</li>
+</ul>
 <h3>Economic Indicators</h3>
 <ul>
 <li>Bureau of Labor Statistics = 1</li>
@@ -333,6 +374,7 @@
 <li>World Development Indicators = 99</li>
 <li>World Economic Outlook = 99</li>
 <li>World Bank Data Catalog = 99</li>
+</ul>
 <h3>Economics</h3>
 <ul>
 <li>AgEcon Search = 1</li>
@@ -372,6 +414,7 @@
 <li>Regional Economic Conditions (RECON) = 99</li>
 <li>RFE: Resources for Economists on the Internet = 99</li>
 <li>U.S. Census Bureau = 99</li>
+</ul>
 <h3>Employment</h3>
 <ul>
 <li>Business Source Complete = 1</li>
@@ -390,6 +433,7 @@
 <li>Panel Study of Income Dynamics (PSID) = 99</li>
 <li>U.S. Economy at a Glance: Perspectives from the U.S. Department of Commerce = 99</li>
 <li>U.S. Trade Statistics = 99</li>
+</ul>
 <h3>Encyclopedia</h3>
 <ul>
 <li>CREDO = 99</li>
@@ -397,6 +441,7 @@
 <li>Encyclopedia of E-Commerce = 99</li>
 <li>Oxford Encyclopedia of Economic History = 99</li>
 <li>Reference Universe = 99</li>
+</ul>
 <h3>Entrepreneurship</h3>
 <ul>
 <li>BPlans.com = 99</li>
@@ -410,6 +455,7 @@
 <li>Franchise Direct = 99</li>
 <li>Schwab Foundation for Social Entrepreneurship = 99</li>
 <li>Small Business Administration = 99</li>
+</ul>
 <h3>Ethics</h3>
 <ul>
 <li>Academic Search Premier = 99</li>
@@ -418,6 +464,7 @@
 <li>CQ Researcher = 99</li>
 <li>CREDO = 99</li>
 <li>Factiva = 99</li>
+</ul>
 <h3>Export</h3>
 <ul>
 <li>CQ Researcher = 1</li>
@@ -445,6 +492,7 @@
 <li>Thomson Reuters Insider Filing Data Feed = 99</li>
 <li>Thomson Reuters Mutual Fund Holdings = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
+</ul>
 <h3>Financial Information</h3>
 <ul>
 <li>EDGAR = 1</li>
@@ -470,14 +518,17 @@
 <li>Wall Street Journal, National Newspapers Core (Proquest) = 99</li>
 <li>Wall Street Journal Historical (1889-1991) = 99</li>
 <li>WRDS SEC Analytics Suite = 99</li>
+</ul>
 <h3>Foreign Direct Investment</h3>
 <ul>
 <li>EIU Viewswire = 1</li>
 <li>Global Insight (IHS) DataInsight Web = 2</li>
+</ul>
 <h3>Franchising</h3>
 <ul>
 <li>Franchise Direct = 1</li>
 <li>Wall Street Journal Interactive Edition: Franchising = 2</li>
+</ul>
 <h3>Fundraising</h3>
 <ul>
 <li>Chronicle of Philanthropy = 99</li>
@@ -498,14 +549,17 @@
 <li>EIU Viewswire = 11</li>
 <li>Media Freedom: Freedom House - Nations in Transit - Country Reports = 12</li>
 <li>CREDO = 99</li>
+</ul>
 <h3>Grants</h3>
 <ul>
 <li>Chronicle of Philanthropy = 99</li>
+</ul>
 <h3>Gross Domestic Product (GDP)</h3>
 <ul>
 <li>Global Insight (IHS) DataInsight Web = 1</li>
 <li>Economagic = 2</li>
 <li>International Comparison Program = 3</li>
+</ul>
 <h3>Gross National Income (GNI)</h3>
 <ul>
 <li>Global Insight (IHS) DataInsight Web = 1</li>
@@ -529,6 +583,7 @@
 <li>Global Insight (IHS) DataInsight Web = 99</li>
 <li>GlobalEdge = 99</li>
 <li>Top U.S. Trading Partners = 99</li>
+</ul>
 <h3>Industry</h3>
 <ul>
 <li>Global Insight (IHS) DataInsight Web = 99</li>
@@ -541,6 +596,7 @@
 <li>Standard &amp; Poor's Net Advantage = 99</li>
 <li>Standard Industrial Classification System (SIC) = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
+</ul>
 <h3>Industry Classification</h3>
 <ul>
 <li>North American Industry Classification System (NAICS) = 1</li>
@@ -549,6 +605,7 @@
 <li>Hoovers Online = 4</li>
 <li>IBIS World = 5</li>
 <li>Correspondence Tables Between SIC and NAICS = 99</li>
+</ul>
 <h3>Industry Overview</h3>
 <ul>
 <li>IBIS World = 1</li>
@@ -556,6 +613,7 @@
 <li>Hoovers Online = 3</li>
 <li>Mergent WebReports = 4</li>
 <li>Gartner Group = 5</li>
+</ul>
 <h3>Industry Ratios</h3>
 <ul>
 <li>D&amp;B Key Business Ratios = 1</li>
@@ -564,6 +622,7 @@
 <li>Standard &amp; Poor's Net Advantage = 3</li>
 <li>WRDS (Wharton Research Data Service) = 5</li>
 <li>CRSP: Center for Research in Security Prices = 99</li>
+</ul>
 <h3>Industry Trends</h3>
 <ul>
 <li>IBIS World = 1</li>
@@ -571,6 +630,7 @@
 <li>Hoovers Online = 3</li>
 <li>Mintel = 4</li>
 <li>Gartner Group = 5</li>
+</ul>
 <h3>International Affairs</h3>
 <ul>
 <li>CIAO : Columbia International Affairs Online = 99</li>
@@ -578,6 +638,7 @@
 <li>JSTOR = 99</li>
 <li>Media Freedom: Freedom House - Nations in Transit - Country Reports = 99</li>
 <li>WWW Virtual Library: International Affairs Resources = 99</li>
+</ul>
 <h3>International Business</h3>
 <ul>
 <li>LANIC = 1</li>
@@ -604,10 +665,12 @@
 <li>World Business Culture = 99</li>
 <li>World News Connection = 99</li>
 <li>World Trade Organization - WTO = 99</li>
+</ul>
 <h3>International Law</h3>
 <ul>
 <li>WorldLII = 1</li>
 <li>GlobalEdge = 2</li>
+</ul>
 <h3>International Trade</h3>
 <ul>
 <li>Factiva = 1</li>
@@ -625,6 +688,7 @@
 <li>U.S. Customs and Borders Protection = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 <li>World Trade Organization - WTO = 99</li>
+</ul>
 <h3>Investment and Securities</h3>
 <ul>
 <li>Morningstar = 1</li>
@@ -655,7 +719,6 @@
 <li>Occupational Outlook Handbook = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 </ul>
-</ul>
 <h3>Law</h3>
 <ul>
 <li>Congressional Publications (ProQuest) = 99</li>
@@ -667,6 +730,7 @@
 <li>U.S. Customs and Borders Protection = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 <li>WestlawNext Campus Search = 99</li>
+</ul>
 <h3>Leadership</h3>
 <ul>
 <li>Business Source Complete = 1</li>
@@ -674,10 +738,12 @@
 <li>Academic Search Premier = 99</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
+</ul>
 <h3>Lifestyles</h3>
 <ul>
 <li>Mintel = 1</li>
 <li>Mediamark (MRI+) = 2</li>
+</ul>
 <h3>Logistics</h3>
 <ul>
 <li>Logistics Performance Index (LPI) = 1</li>
@@ -695,6 +761,7 @@
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
 <li>PsycInfo = 99</li>
+</ul>
 <h3>Manufacturing</h3>
 <ul>
 <li>ThomasNet = 1</li>
@@ -702,14 +769,17 @@
 <li>CREDO = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 <li>Wholesale Distributors Net = 99</li>
+</ul>
 <h3>Market Share</h3>
 <ul>
 <li>RDS Business Reference Suite = 1</li>
 <li>IBIS World = 2</li>
+</ul>
 <h3>Market Size</h3>
 <ul>
 <li>IBIS World = 1</li>
 <li>Mintel = 2</li>
+</ul>
 <h3>Marketing</h3>
 <ul>
 <li>Market Research Library = 1</li>
@@ -720,12 +790,15 @@
 <li>JSTOR = 99</li>
 <li>Mediamark (MRI+) = 99</li>
 <li>RDS Business Reference Suite = 99</li>
+</ul>
 <h3>Marketing Plans</h3>
 <ul>
 <li>BPlans.com = 99</li>
+</ul>
 <h3>Master's Theses</h3>
 <ul>
 <li>Dissertations &amp; Theses: Full Text = 99</li>
+</ul>
 <h3>Mergers and Acquisitions</h3>
 <ul>
 <li>Bloomberg = 1</li>
@@ -736,6 +809,7 @@
 <li>Thomson Reuters SDC Platinum = 6</li>
 <li>Datastream Advance = 7</li>
 <li>WRDS (Wharton Research Data Service) = 8</li>
+</ul>
 <h3>Mutual Funds</h3>
 <ul>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
@@ -749,6 +823,7 @@
 <ul>
 <li>Correspondence Tables Between SIC and NAICS = 99</li>
 <li>North American Industry Classification System (NAICS) = 99</li>
+</ul>
 <h3>News</h3>
 <ul>
 <li>LexisNexis Academic = 1</li>
@@ -770,6 +845,7 @@
 <li>National Newspapers = 99</li>
 <li>Regional Business News (EBSCO) = 99</li>
 <li>Thomson Reuters Eikon = 99</li>
+</ul>
 <h3>Nonprofits</h3>
 <ul>
 <li>GuideStar = 1</li>
@@ -790,9 +866,11 @@
 <li>Factiva = 2</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
+</ul>
 <h3>Options</h3>
 <ul>
 <li>OptionMetrics = 99</li>
+</ul>
 <h3>Outsourcing</h3>
 <ul>
 <li>Academic Search Premier = 99</li>
@@ -801,6 +879,7 @@
 <h3>Patents and Trademarks</h3>
 <ul>
 <li>Patents and Trademarks = 1</li>
+</ul>
 <h3>Philanthropy</h3>
 <ul>
 <li>American Institute for Philanthropy = 99</li>
@@ -808,29 +887,33 @@
 <li>Chronicle of Philanthropy = 99</li>
 <li>Foundation Center = 99</li>
 <li>Panel Study of Income Dynamics (PSID) = 99</li>
+</ul>
 <h3>Polls</h3>
 <ul>
 <li>Gallup Brain = 99</li>
 <li>Panel Study of Income Dynamics (PSID) = 99</li>
+</ul>
 <h3>Ports</h3>
 <ul>
 <li>PortFocus: Ports Harbours Marinas Worldwide = 99</li>
+</ul>
 <h3>Product Codes</h3>
 <ul>
 <li>Harmonized Tariff Schedule (HTF) Codes = 1</li>
 <li>Statistical Classification of Domestic and Foreign Commodities Exported from the United States (Schedule B) = 2</li>
+</ul>
 <h3>Product Development</h3>
 <ul>
 <li>RDS Business Reference Suite = 1</li>
 <li>Business Source Complete = 2</li>
 <li>CeBIT = 99</li>
+</ul>
 <h3>Public Policy</h3>
 <ul>
 <li>Academic Search Premier = 99</li>
 <li>CIAO : Columbia International Affairs Online = 99</li>
 <li>National Bureau of Economic Research (NBER) = 99</li>
 <li>WWW Virtual Library: International Affairs Resources = 99</li>
-</ul>
 </ul>
 <h3>Rankings</h3>
 <ul>
@@ -839,9 +922,11 @@
 <li>GuideStar = 3</li>
 <li>Top U.S. Trading Partners = 4</li>
 <li>Fortune's 100 Best Companies to Work For &reg; = 99</li>
+</ul>
 <h3>Regional News</h3>
 <ul>
 <li>Regional Business News (EBSCO) = 99</li>
+</ul>
 <h3>Regulations</h3>
 <ul>
 <li>LexisNexis State Capital = 1</li>
@@ -854,6 +939,7 @@
 <li>Legal Information Institute at Cornell University = 99</li>
 <li>U.S. Customs and Borders Protection = 99</li>
 <li>U.S. Trade Statistics = 99</li>
+</ul>
 <h3>Risk</h3>
 <ul>
 <li>Country Data (PRS) = 1</li>
@@ -867,23 +953,28 @@
 <li>Datastream Advance = 3</li>
 <li>WRDS (Wharton Research Data Service) = 4</li>
 <li>EconLit = 5</li>
+</ul>
 <h3>SEC Filings</h3>
 <ul>
 <li>EDGAR = 1</li>
 <li>Hoovers Online = 99</li>
 <li>WRDS SEC Analytics Suite = 99</li>
+</ul>
 <h3>SIC</h3>
 <ul>
 <li>Correspondence Tables Between SIC and NAICS = 99</li>
+</ul>
 <h3>SWOT</h3>
 <ul>
 <li>Business Source Complete = 99</li>
+</ul>
 <h3>Small Business</h3>
 <ul>
 <li>Encyclopedia of Small Business = 1</li>
 <li>FindLaw Small Business Center = 2</li>
 <li>Small Business Administration = 3</li>
 <li>Franchise Direct = 99</li>
+</ul>
 <h3>Social Entrepreneurship</h3>
 <ul>
 <li>Business Source Complete = 1</li>
@@ -891,6 +982,7 @@
 <li>Schwab Foundation for Social Entrepreneurship = 3</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
+</ul>
 <h3>Statistics: International</h3>
 <ul>
 <li>Africa Development Indicators, World Bank = 1</li>
@@ -920,6 +1012,7 @@
 <li>Statistical Insight (ProQuest) = 99</li>
 <li>Statistical Sites of the World Wide Web = 99</li>
 <li>World Economic Outlook = 99</li>
+</ul>
 <h3>Statistics: United States</h3>
 <ul>
 <li>American FactFinder = 1</li>
@@ -950,6 +1043,7 @@
 <li>State Data Centers = 99</li>
 <li>Statistical Insight (ProQuest) = 99</li>
 <li>U.S. Census Bureau = 99</li>
+</ul>
 <h3>Stock Exchange</h3>
 <ul>
 <li>NASDAQ = 1</li>
@@ -959,6 +1053,7 @@
 <li>Institute for the Study of Security Markets (ISSM) = 5</li>
 <li>Datastream Advance = 6</li>
 <li>WRDS (Wharton Research Data Service) = 7</li>
+</ul>
 <h3>Stocks</h3>
 <ul>
 <li>Morningstar = 1</li>
@@ -978,6 +1073,7 @@
 <li>Standard &amp; Poor's Net Advantage = 99</li>
 <li>Standard &amp; Poor's = 99</li>
 <li>Thomson Reuters Eikon = 99</li>
+</ul>
 <h3>Surveys</h3>
 <ul>
 <li>Gallup Brain = 99</li>
@@ -992,6 +1088,7 @@
 <li>Business Source Complete = 5</li>
 <li>Factiva = 6</li>
 <li>Encyclopedia of Small Business = 99</li>
+</ul>
 <h3>Technology</h3>
 <ul>
 <li>CeBIT = 99</li>
@@ -1000,25 +1097,31 @@
 <li>Google Scholar = 99</li>
 <li>Information and Communication Technologies (ICT) At-A-Glance Tables = 99</li>
 <li>JSTOR = 99</li>
+</ul>
 <h3>Tests</h3>
 <ul>
 <li>Testing and Education Reference Center = 99</li>
+</ul>
 <h3>Theses</h3>
 <ul>
 <li>Dissertations &amp; Theses: Full Text = 99</li>
+</ul>
 <h3>Trade Agreements</h3>
 <ul>
 <li>U.S. Commercial Service = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 <li>World Trade Organization - WTO = 99</li>
+</ul>
 <h3>Training</h3>
 <ul>
 <li>Occupational Outlook Handbook = 99</li>
 <li>PsycInfo = 99</li>
 <li>Testing and Education Reference Center = 99</li>
+</ul>
 <h3>Trains</h3>
 <ul>
 <li>RAILIndustry.com = 99</li>
+</ul>
 <h3>Transportation Modes</h3>
 <ul>
 <li>Freight World = 1</li>
@@ -1026,10 +1129,10 @@
 <li>RAILIndustry.com = 3</li>
 <li>TIDE'S Directory of Transportation Information = 4</li>
 </ul>
-</ul>
 <h3>Venture Capital</h3>
 <ul>
 <li>PricewaterhouseCoopers: MoneyTree Report = 99</li>
+</ul>
 <h3>Volunteerism</h3>
 <ul>
 <li>PsycInfo = 99</li>
@@ -1039,10 +1142,8 @@
 <ul>
 <li>Factiva = 99</li>
 <li>National Newspapers = 99</li>
+</ul>
 <h3>Wholesale</h3>
 <ul>
 <li>Wholesale Distributors Net = 1</li>
-</ul>
-</ul>
-</ul>
 </ul>
